
include $(top_srcdir)/Makefile.common

SUBDIRS = .

noinst_LTLIBRARIES = libZMapDas.la

libZMapDas_la_SOURCES = zmapDAS1DSN.c zmapDAS1Parser.c
libZMapDas_la_LIBADD  = 
libZMapDas_la_CFLAGS  = $(INCLUDE_COMMON)
libZMapDas_la_LDFLAGS = 


# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/zmapDAS/Makefile.in




