
include $(top_srcdir)/Makefile.zmap

SUBDIRS = .

noinst_LTLIBRARIES = libZMapDas.la

libZMapDas_la_SOURCES = zmapDAS1DSN.cpp zmapDAS1Parser.cpp
libZMapDas_la_LIBADD  = 
libZMapDas_la_CFLAGS  = $(INCLUDE_COMMON)
libZMapDas_la_LDFLAGS = 


# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/zmapDAS/Makefile.in




