
include $(top_srcdir)/Makefile.common

SUBDIRS = .

noinst_LTLIBRARIES = libZMapManager.la

libZMapManager_la_SOURCES = zmapManager.c zmapManager_P.h
libZMapManager_la_LIBADD  = 
libZMapManager_la_CFLAGS  = $(INCLUDE_COMMON)
libZMapManager_la_LDFLAGS =




# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/zmapManager/Makefile.in
