
include $(top_srcdir)/Makefile.common

# disabled tests for now....we aren't even using them....
SUBDIRS = . tests
#SUBDIRS = .

noinst_LTLIBRARIES = libZMapUtils.la

libZMapUtils_la_SOURCES = safe-ctype.c \
zmapAppRemoteUtils.c \
zmapBase.c \
zmapBase_I.h \
zmapCmdLineArgs.c \
zmapCmdLineArgs_P.h \
zmapCompileDate.c \
zmapCoords.c \
zmapDNA.c \
zmapFASTA.c \
zmapFileUtils.c \
zmapFooUtils.c \
zmapGLibUtils.c \
zmapGUINotebook.c \
zmapGUITreeView.c \
zmapGUITreeView_I.h \
zmapGUImenus.c \
zmapGUIutils.c \
zmapHandle.c \
zmapIOOut.c \
zmapIO_P.h \
zmapLogging.c \
zmapPeptide.c \
zmapRadixSort.c \
zmapReadLine.c \
zmapReadLine_P.h \
zmapSO.c \
zmapSequence.c \
zmapSkipList.c \
zmapString.c \
zmapUrl.c \
zmapUrlUtils.c \
zmapUtils.c \
zmapUtilsConfig.c \
zmapUtilsSpawn.c \
zmapUtilsUsers.c \
zmapUtils_P.h \
zmapVersion.c \
zmapWebBrowser.c \
zmapXRemoteUtils.c \
$(NULL)

libZMapUtils_la_CFLAGS = $(INCLUDE_COMMON)
