
include $(top_srcdir)/Makefile.common

SUBDIRS = . tests

noinst_LTLIBRARIES = libZMapUtils.la

libZMapUtils_la_SOURCES = \
$(ZMAP_COMPILEDATE_FILE) \
zmapGUITreeView_I.h \
zmapCmdLineArgs_P.h \
zmapHandle.c \
zmapFileUtils.c \
zmapLogging.c \
zmapString.c \
zmapCmdLineArgs.c \
zmapFASTA.c \
zmapIO_P.h \
zmapXRemoteUtils.c \
zmapBase_I.h \
zmapCoords.c \
zmapWebBrowser.c \
zmapGUITreeView.c \
zmapDNA.c \
zmapReadLine_P.h \
zmapGUImenus.c \
zmapPeptide.c \
zmapUrl.c \
safe-ctype.c \
zmapUtils.c \
zmapGUINotebook.c \
zmapUtils_P.h \
zmapGUIutils.c \
zmapUtilsSpawn.c \
zmapReadLine.c \
zmapIOOut.c \
zmapGLibUtils.c \
zmapSequence.c \
zmapSO.c \
zmapFooUtils.c \
zmapBase.c \
zmapUrlUtils.c \
zmapUtilsUsers.c \
zmapRadixSort.c \
zmapSkipList.c\
$(NULL)

libZMapUtils_la_CFLAGS = $(INCLUDE_COMMON)



# Create a file containing the compile date each time zmap is compiled.
# NOTE, this file is not in the repository because it will change with
# every build.
#
ZMAP_COMPILEDATE_FILE = zmapCompileDate.c
ZMAP_COMPILEDATE_PATH = zmapUtils/$(ZMAP_COMPILEDATE_FILE)
ZMAP_COMPILEDATE_FILE_CODE =                            \
                                                    \
char *zmapCompileString(void)                       \
{                                                   \
  return ZMAP_COMPILE_STRING() ;                    \
}


# Here's the target that creates the file containing the ZMAP_COMPILEDATE_FILE_CODE.
# By making build-compiledate-file depend on the empty forcemake target it gets
# remade every time. By making ZMAP_COMPILEDATE_FILE depend on build-compiledate-file
# we make sure the file is created before it needs to be compiled !
#

$(ZMAP_COMPILEDATE_FILE): build-compiledate-file

forcemake:

build-compiledate-file: forcemake
	echo "creating compiledate file....." ; \
	echo "/* Do not Edit - generated by makefile target $@ */" > $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "#include <zmapUtils_P.h>" >> $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "$(ZMAP_COMPILEDATE_FILE_CODE)" >> $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "created compiledate file....."


