
include $(top_srcdir)/Makefile.common

# disabled tests for now....we aren't even using them....
SUBDIRS = . tests
#SUBDIRS = .

noinst_LTLIBRARIES = libZMapUtils.la

libZMapUtils_la_SOURCES = safe-ctype.c \
$(ZMAP_COMPILEDATE_FILE) \
zmapAppRemoteUtils.c \
zmapBase.c \
zmapBase_I.h \
zmapCmdLineArgs.c \
zmapCmdLineArgs_P.h \
zmapCompileDate.c \
zmapCoords.c \
zmapDNA.c \
zmapFASTA.c \
zmapFileUtils.c \
zmapFooUtils.c \
zmapGLibUtils.c \
zmapGUINotebook.c \
zmapGUITreeView.c \
zmapGUITreeView_I.h \
zmapGUImenus.c \
zmapGUIutils.c \
zmapHandle.c \
zmapIOOut.c \
zmapIO_P.h \
zmapLogging.c \
zmapPeptide.c \
zmapRadixSort.c \
zmapReadLine.c \
zmapReadLine_P.h \
zmapSO.c \
zmapSignals.c \
zmapSequence.c \
zmapSkipList.c \
zmapStackTrace.c \
zmapString.c \
zmapUrl.c \
zmapUrlUtils.c \
zmapUtils.c \
zmapUtilsSpawn.c \
zmapUtilsUsers.c \
zmapUtils_P.h \
zmapWebBrowser.c \
$(NULL)

libZMapUtils_la_CFLAGS = $(INCLUDE_COMMON)



# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/zmapUtils/Makefile.in



# Create a file containing the compile date each time zmap is compiled.
# NOTE, this file is not in the repository because it will change with
# every build.
#
ZMAP_COMPILEDATE_FILE = zmapCompileDate.c
ZMAP_COMPILEDATE_PATH = zmapUtils/$(ZMAP_COMPILEDATE_FILE)
ZMAP_COMPILEDATE_FILE_CODE =                            \
                                                    \
char *zmapCompileString(void)                       \
{                                                   \
  return ZMAP_COMPILE_STRING() ;                    \
}


# Here's the target that creates the file containing the ZMAP_COMPILEDATE_FILE_CODE.
# By making build-compiledate-file depend on the empty forcemake target it gets
# remade every time. By making ZMAP_COMPILEDATE_FILE depend on build-compiledate-file
# we make sure the file is created before it needs to be compiled !
#

$(ZMAP_COMPILEDATE_FILE): build-compiledate-file

forcemake:

build-compiledate-file: forcemake
	echo "creating compiledate file....." ; \
	echo "/* Do not Edit - generated by makefile target $@ */" > $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "#include <zmapUtils_P.h>" >> $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "$(ZMAP_COMPILEDATE_FILE_CODE)" >> $(top_srcdir)/$(ZMAP_COMPILEDATE_PATH) ; \
	echo "created compiledate file....."


